# caffe

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README.md  gen_proto.py  run.sh  run_test.sh  test_new_features.sh
.agents/: README.md  architecture-map.md  context-routing.md  layerparameter-reorder-20260722.md  task-summary-caffe-proto-20260722.md
.trae/specs/caffe-cpp-slim-tvm-ffi/: build-pitfalls-guide.md  checklist.md  retrospective-20260723.md  spec.md  tasks.md
.trae/specs/caffe-dataclasses-rename/: checklist.md  spec.md  tasks.md
.trae/specs/caffe-io-rename/: checklist.md  spec.md  tasks.md
.trae/specs/docker-images-for-modules/: checklist.md  fix-summary-20260723.md  spec.md  tasks.md  test-report-20260723.md
.trae/specs/python-dataclass-refactor/: checklist.md  refactor-comparison.md  spec.md  task-summary.md  tasks.md
.trae/specs/reorganize-python-directory/: checklist.md  spec.md  task-summary.md  tasks.md
.trae/specs/upgrade-pycaffe-binding/: checklist.md  spec.md  tasks.md
caffe-slim/: CMakeLists.txt  final_audit.sh  test_python.py
caffe-slim/caffeproto/: caffe_fuse.py  caffe_utils.py
caffe-slim/include/caffe/: blob.hpp  caffe.hpp  internal_thread.hpp  layer.hpp  solver.hpp  syncedmem.hpp
caffe-slim/include/caffe/compat/: chrono.hpp  filesystem.hpp  logging.hpp  math.hpp  smart_ptr.hpp  string_utils.hpp  thread.hpp
caffe-slim/include/caffe/layers/: argmax_layer.hpp  base_data_layer.hpp  bnll_layer.hpp  clip_layer.hpp  exp_layer.hpp  log_layer.hpp  loss_layer.hpp  mvn_layer.hpp  neuron_layer.hpp  pooling_layer.hpp  power_layer.hpp  sigmoid_layer.hpp  slice_layer.hpp  softmax_loss_layer.hpp  threshold_layer.hpp  tile_layer.hpp
caffe-slim/include/caffe/util/: benchmark.hpp  blocking_queue.hpp  insert_splits.hpp  math_functions.hpp  mkl_alternate.hpp  rng.hpp
caffe-slim/operators/: __init__.py  layers.py
caffe-slim/protos/: caffe.proto
caffe-slim/pycaffe/: CMakeLists.txt  pyproject.toml
caffe-slim/pycaffe/python/pycaffe/: __init__.py  _caffe.cpp  data_types.py  draw.py  pycaffe.py  transforms.py
caffe-slim/scripts/: gen_proto.py  test_new_features.sh
caffe-slim/src/caffe/: _caffe.cpp  common.cpp  data_transformer.cpp  layer_factory.cpp  net.cpp
caffe-slim/src/caffe/layers/: accuracy_layer.cpp  argmax_layer.cpp  base_conv_layer.cpp  batch_norm_layer.cpp  deconv_layer.cpp  dropout_layer.cpp  eltwise_layer.cpp  exp_layer.cpp  log_layer.cpp  loss_layer.cpp  lrn_layer.cpp  mvn_layer.cpp  pooling_layer.cpp  reshape_layer.cpp  scale_layer.cpp  sigmoid_layer.cpp  softmax_loss_layer.cpp  split_layer.cpp  tanh_layer.cpp  tile_layer.cpp
caffe-slim/src/caffe/proto/: caffe.proto
caffe-slim/src/caffe/util/: io.cpp  upgrade_proto.cpp
caffe-slim/tests/: build_and_test.sh  check_symbols.sh  test_caffe_slim.cpp  test_inference.py  verify.py
caffex/: CMakeLists.txt  Makefile  conanfile.py  fix-p0-deps.patch
caffex/cmake/: Dependencies.cmake  ProtoBuf.cmake
caffex/examples/: 00-classification.ipynb
caffex/python/: CMakeLists.txt
caffex/python/caffe/: _caffe.cpp  io.py
caffex/src/caffe/: CMakeLists.txt  layer_factory.cpp
caffex/src/caffe/layers/: hdf5_data_layer.cpp  hdf5_output_layer.cpp
caffex/src/caffe/proto/: caffe.proto
caffex/src/caffe/util/: io.cpp  signal_handler.cpp
caffex/tools/: CMakeLists.txt
docker/local/conda/: Dockerfile  Dockerfile.conda  RUNTIME_IMAGE_USAGE.md  _check_py314.sh  _write_dockerfile.py  build.sh  entrypoint_test.sh  run.sh  runtest.sh  test_new_features.sh
docker/local/conda/config/: condarc  pip.conf
docker/local/conda/scripts/: generate-makefile-config.sh  verify-caffe.sh  verify-runtime.sh
docker/local/lib/: check_env.sh  log.sh
docker/modules/: Makefile
docker/modules/pycaffe/: Dockerfile
docker/modules/pycaffe/scripts/: verify-parity.sh
docker/modules/python-module/: Dockerfile  test_pure_python.py
docker/modules/python-module/scripts/: comprehensive_test.sh  debug_import.py  test_runner.py  verify-python-module.sh
docker/modules/scripts/: analyze-project.sh  check_boost.sh  test_caffe.py  verify_imports_pycaffe.py  verify_imports_python_module.py
docker/origin/: .gitignore  BUILD_REPORT.md  Dockerfile  README.md  build.sh  run.sh
docker/origin/scripts/: generate-makefile-config.sh
docker/standalone/pycaffe/: CMakeLists.txt  Dockerfile  README.md
docker/standalone/pycaffe/scripts/: verify-parity.sh  (+1 more)
docs/: adding-operators.md
examples/op-extension/: README.md
examples/op-extension/code/: gen_proto_demo.py  hardsigmoid_layer.py  hardsigmoid_param.proto  test_hardsigmoid.py
protos/: caffe.proto
python/: CMakeLists.txt  caffe_pb2.py  caffe_utils.py  final_audit.sh  test_l2norm.py  utils.py
python/caffeproto/: __init__.py  caffe_fuse.py
python/include/caffe/: common.hpp  data_transformer.hpp  filler.hpp  layer_factory.hpp  net.hpp
python/operators/: layers.py
python/protos/: caffe_pb2.py
python/pycaffe/: CMakeLists.txt  _check_python.sh  _diag.sh  build.sh  test_inference.py  verify.py
python/pycaffe/python/pycaffe/: __init__.py  _caffe.cpp  classifier.py  coord_map.py  data_processor.py  detector.py  draw.py  io.py  net_spec.py  pycaffe.py  transforms.py
python/pycaffe/python/pycaffe/proto/: caffe_pb2.py
python/python/caffe/: __init__.py
python/scripts/: _check_python.sh  _diag.sh  gen_proto.py  run_test.sh  test_new_features.sh
python/src/caffe/: blob.cpp  syncedmem.cpp
python/tests/: __init__.py  check_deps.sh  full_rebuild_test.sh  rebuild_and_test.sh  test_basic_import.py  test_dataclasses.py  test_l2norm.py
reports/: caffe-build-pitfalls-guide.md  retrospective-caffe-slim-tvm-ffi-20260723.md
scripts/: README.md  test.ps1  xin_profile
src/: caffeproto.cpp
tests/: README.md
tests/caffex/: CMakeLists.txt  conanfile.py
tests/caffex/include/: caffex.h
tests/caffex/src/: caffex.cpp
tests/hello/: CMakeLists.txt  conanfile.py
tests/hello/src/: hello.cpp
tests/myaddresser/: CMakeLists.txt  README.md
tests/myaddresser/tests/: CMakeLists.txt
tools/build-config/: .conanrc  CMakeLists.txt  README.md
(+34 files in other folders)
