[build-system]
requires = ["scikit-build-core>=0.10", "ninja", "cmake>=3.18", "numpy>=1.7.1"]
build-backend = "scikit_build_core.build"

[project]
name = "pycaffe"
version = "1.0.0"
description = "Caffe Python Interface - CPU-only, built with scikit-build-core + CMake + Ninja"
readme = { text = "PyCaffe: Caffe Deep Learning Framework Python Interface", content-type = "text/plain" }
license = { text = "BSD-2-Clause" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["deep learning", "caffe", "inference", "neural network"]
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.7.1",
    "scipy>=0.13.2",
    "scikit-image>=0.9.3",
    "matplotlib>=1.3.1",
    "h5py>=2.2.0",
    "networkx>=1.8.1",
    "pandas>=0.12.0",
    "protobuf>=3.0",
    "pyyaml>=3.10",
    "Pillow>=2.3.0",
]

[project.optional-dependencies]
test = [
    "nose>=1.3.0",
]
full = [
    "ipython>=3.0.0",
    "python-gflags>=2.0",
    "leveldb>=0.191",
]

[tool.scikit-build]
wheel.py-api = "py3"
wheel.packages = ["python/pycaffe"]
wheel.install-dir = ""
build-dir = "build-wheel"
cmake.version = "CMakeLists.txt"
cmake.build-type = "Release"
ninja.make-fallback = false

[tool.scikit-build.cmake.define]
CMAKE_EXPORT_COMPILE_COMMANDS = "ON"